# IndexBasedContainers

./: CMakeLists.txt  LICENSE  main.c
examples/: main.c
include/: buffer.c  buffer.h  ib_buffer.c  ib_buffer.h  ib_map.c  ib_map.h
tests/: test.c
